<resources>
    <string name="action_settings">Settings</string>
    <string-array name="views_array">
        <item>Первый экран</item>
        <item>Второй экран</item>
        <item>Третий экран</item>
    </string-array>
    <string name="menu">Меню</string>
    <string name="first_screen">Первый экран</string>
    <string name="second_screen">Второй экран</string>
    <string name="third_screen">Третий экран</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="app_name">"Runannex"</string>
    <string name="Рост">Рост</string>
    <string name="Далее">Далее</string>
    <string name="Возраст">Возраст</string>
    <string name="Вес">Вес</string>
    <string name="Имя">Имя</string>
    <string name="error">Заполните поля</string>
    <string name="start">Пуск</string>
    <string name="stop">Стоп</string>
    <string name="pause">Пауза</string>
    <string name="cont">Продолжить</string>
    <string name="time">Время</string>
    <string name="title_activity_maps">Map</string>
    <string name="distance">Дистанция (м)</string>
    <string name="calorii">Калории (Ккал)</string>
    <string name="halfV">Ср. скорость (км/ч)</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="list">Всего выполнено </string>
    <string name= "appname">Runannex</string>


</resources>